# tantivy_rb

./: .gitignore  Cargo.toml  LICENSE  README.md  Rakefile  tantivy_rb.gemspec
docs/: TOKENIZERS.md
ext/tantivy_rb/: Cargo.toml  extconf.rb
ext/tantivy_rb/src/: index.rs  lib.rs  schema.rs  search.rs
ext/tantivy_rb/src/tokenizer/: default.rs  mod.rs
ext/tantivy_rb/src/tokenizer/compound/: classifier.rs  expander.rs  mod.rs  query.rs  stop_words.rs  tests.rs
lib/: tantivy_rb.rb
lib/tantivy_rb/: version.rb
test/: tantivy_rb_test.rb  test_helper.rb
