[package]
name = "tantivy_rb"
# Keep in sync with lib/tantivy_rb/version.rb
version = "0.9.0"
edition = "2021"
publish = false
description = "Ruby native extension wrapping the Tantivy full-text search engine via magnus/rb-sys"
authors = ["Amphora Research Systems <dev@amphora.net>"]
license = "Proprietary"
readme = "../../README.md"
rust-version = "1.81"

[lib]
crate-type = ["cdylib"]

# magnus 0.7 requires Ruby >= 3.0; rb-sys must track the same minor series.
# tantivy processes user-controlled content — pin to audited versions.
[dependencies]
# Exact-pinned: magnus and rb-sys are Ruby FFI bindings. Their versions are
# coupled to the Ruby ABI — a minor bump can change struct layouts or calling
# conventions, causing segfaults. Only bump these together after verifying
# against the target Ruby version.
magnus = { version = "=0.7.1", features = ["rb-sys"] }
rb-sys = "=0.9.124"
# Exact-pinned: core search engine. Version bumps can change indexing
# behaviour or on-disk format.
tantivy = "=0.24.2"
# Tilde-pinned: non-FFI utility crates. ~x.y.z allows patch-level updates
# via `cargo update` for security fixes while constraining the minor version.
rust-stemmers = "~1.2.0"
chrono = "~0.4.43"  # >= 0.4.20 required to avoid RUSTSEC-2020-0159
